--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://www.wtwrjg.crabdance.com",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
